# rust-multiple-sdk-with-callbacks

./: .gitignore  LICENSE  README.md  test_sdk.sh
java-sdk/: build.gradle  settings.gradle
java-sdk/gradle/wrapper/: gradle-wrapper.properties
java-sdk/src/main/java/com/mineraud/pingpong/: PingPongCallback.java  PingPongSdk.java
java-sdk/src/test/java/com/mineraud/pingpong/: PingPongSdkTest.java
node-sdk/: package-lock.json  package.json  ping-pong-sdk.js
python-sdk/: ping_pong_sdk.py
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
